tests/out/error/index/invalid_index.in.bt
arr := [1, 2, 3]
_ = arr[0]
_ = arr[true]
_ = arr[1.0]
_ = arr["hi"]

s := "hello"
_ = s[0]
_ = s[arr]
_ = s[`x`]

mymap := map{
	"a": 1
}
_ = mymap["b"]
_ = mymap[0]
_ = mymap[s]
